--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,9 @@
     background: linear-gradient(to left, #b8b8b8, #f2f2f2, #dbdbdb, #b8b8b8);
 }
 .portfolio-box{
-    border: solid 0.3vh black;
-    box-shadow: inset 0 0 4vh #000000;
+    border: solid 0.3vh gray;
+    background-color: #0b0b0b;
+    box-shadow: 0vh 0.1vh 5vh 0vh gray;
 }
 .img-portafolio{
     padding: 5vh;
