--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 
 .box-info{
     border-radius: 15px;
-    background: black;
+    background: #022742;
     margin-right:auto;margin-left:auto;
-    background: -webkit-linear-gradient(to top, black, #2E3740, black);
-    background: linear-gradient(to top, black, #2E3740, black 50%);
-    padding-bottom: 0.7%; box-shadow: -10px 20px 20px -6px gray;
+    background: -webkit-linear-gradient(to top, #022742, #71C2F2, #022742);
+    background: linear-gradient(to top, #022742, #71C2F2, #022742 100%);
+    padding-bottom: 0.7%;
+    box-shadow: 1px 1px 70px 43px #71C2F2;
+    border: solid 2px #022742;
 }
 
 .info{
@@ -27,8 +29,8 @@
     left: -200px;
     border-radius: 15px 15px 0px 0px;
     background: #b8b8b8; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #b8b8b8, #f2f2f2, #dbdbdb, #b8b8b8); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #b8b8b8, #f2f2f2, #dbdbdb, #b8b8b8);
+    background: -webkit-linear-gradient(to left, #05568D, #499FD9, #499FD9, #05568D); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #05568D, #499FD9, #499FD9, #05568D);
     height: 35vh;
 }
 @media (min-width:992px){
@@ -38,8 +40,8 @@
 }
 
 .img-photo{
-    box-shadow: -10px 10px 8px -6px gray;
-    border: solid 2px black;
+    box-shadow: 1px 1px 23px 14px #71C2F2;
+    border: solid 2px #05568D;
     margin-top: 6vh;
     width: 70%;
     height: 80%;
@@ -54,10 +56,10 @@
 .info-right{
     right: -200px;
     border-radius: 0px 0px 0px 0px;
-    color:#182153;
-    background-color: #F1F1F1;
-    background: -webkit-linear-gradient(to left, #F1F1F1, #dff0d8, #f2f2f2, #F1F1F1); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #dddddd, #f1f1f1, #f2f2f2, #dddddd);height: 35vh;
+    color:#022742;
+    background-color: #B7E3F7;
+    background: -webkit-linear-gradient(to left, #B7E3F7, #346175, #56A1C2, #B7E3F7); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #346175, #B7E3F7, #B7E3F7, #346175);height: 35vh;
 }
 @media (min-width:992px){
     .info-right{
@@ -66,7 +68,7 @@
 }
 
 .info-in{
-    text-shadow: 0px 1px 1px #4f92bf;
+    text-shadow: 2px 2px 2px #71C2F2;
     text-align: center;
     padding-top: 2vh;
     margin-top: 1.7vh;
@@ -114,6 +116,12 @@
     background-size: cover;
     width: 3vmax;
     height: 3vmax;
+    box-shadow: 1px 1px 23px -1px #71C2F2;
+    border: solid 2px #022742;
+    border-radius: 50%;
+    background: #05568D;
+    background-position: center;
+
 }
 
 .icon-facebook{
@@ -142,14 +150,13 @@
 }
 
 #services{
-    background: #b8b8b8; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #b8b8b8, #f2f2f2, #dbdbdb, #b8b8b8); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #b8b8b8, #f2f2f2, #dbdbdb, #b8b8b8);
+    background:  #0165A7;
+    box-shadow: inset 0 0 105px black;
 }
 .portfolio-box{
     border: solid 0.3vh gray;
     background-color: #0b0b0b;
-    box-shadow: 0vh 0.1vh 5vh 0vh gray;
+    box-shadow: 0vh 0.1vh 5vh 0vh #71C2F2;
 }
 .img-portafolio{
     padding: 5vh;
@@ -162,4 +169,37 @@
 }
 .img-br{
     border-radius: 2vh;
+}
+a, hr{
+    color: #9FA50A;
+    text-shadow: 0px 0px 1px black;
+}
+p{
+    font-size: 21px;
+}
+.h2, h2 {
+    font-size: 54px;
+}
+.service-box > img {
+
+    border-radius: 50%;
+
+}
+img{
+    padding: 1%;
+    border: solid 2px #022742;
+    width: 14%;
+    box-shadow: 1px 1px 14px #71C2F2;
+}
+.text-faded {
+    color: rgba(255,255,255,1);
+}
+hr{
+    border-color: #fff;
+    border-width: 1px;
+    max-width: 100%;
+}
+.portfolio-box:hover .portfolio-box-caption{
+    background: rgba(0, 156, 218, 0.8);
+    opacity: 1;
 }
